Added new styling and a few pages
Added styling for all pages. Added a dev update and lore bits page.

--- a/index.html
+++ b/index.html
@@ -3,194 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Passion Project</title>
+    <script src="https://kit.fontawesome.com/ee8a9ecea1.js" crossorigin="anonymous"></script>
+    <title>Passion project</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <header>
-        <h1>Passion Project</h1>
-            <p>This is a prject for creating a new tabletop game as designed by friends and family.</p>
-            <p>Please take the following as if it were wet clay. Nothing is set in stone and all things are up for interpretation, discussion, feedback, and fixing.
-                I want to start this project because I want to be close to you (my friends) and have a creative outlet where we're not subjected to weird motivations 
-                from third parties, companies, and politics.
-            </p>
-    </header>
-
-    <section class = "idea">
-        <h2>Foundations</h2>
-            <p>The passion project is split into the following
-            ideas to create a foundation for all the details
-            to stand on.
-            </p>
-
-            <ol>
-                <li>Core Concept and Theme</li>
-                <li>Scale and Scope</li>
-                <li>Core Mechanics</li>
-                <li>Factions and Unit Variety</li>
-                <li>Objectives and Victory Conditions</li>
-                <li>Terrain and Environments</li>
-                <li>Progression and Customization</li>
-                <li>Accessibility and Components</li>
-                <li>Playtesting framework</li>
-                <li>Unique selling point</li>
-            </ol>
-    </section>
-
-    <section class="idea2" id="core_concept">
-        <h2>Core Concept and Theme objectives</h2>
+    
+    <div class="wrapper">
+        <!-- Navigation -->
+         <nav class="main-nav">
             <ul>
-                <li>Define the setting and narrative. Will it 
-                    be sci-fi, fantasy, historical, or something
-                    unique?
-                </li>
-                <li>Establish why players are fighting. Are there
-                    factions with distinct motivations?
-                </li>
+                <li><a href="foundations.html">Foundations</a></li>
+                <li><a href="dev.html">Dev Updates</a></li>
+                <li><a href="#">Lore bits</a></li>
             </ul>
-    </section>
+         </nav>
 
-    <section class = "idea" id="scale_scope">
-        <h2>Scale and Scope</h2>
-            <ul>
-                <li>What's the game's scale? 5-20 models per side?
-                    Large battles with 50+ models?
-                </li>
-                <li>What's a typical game size? A board sized at 
-                    2' x 2'? 4' x 4'? What fits the narrative and 
-                    objectives?
-                </li>
-                <li>Consider playtime as well. 1-2 hours sounds 
-                    like a good time.
-                </li>
-            </ul>
-    </section>
+        <!-- Top container -->
+        <section class="top-container">
+            <header class="showcase">
+                <h1>Passion project</h1>
+                <p>Things and stuff</p>
+                <a href="#" class="btn">More</a>
+            </header>
 
-    <section class="idea2" id="mechanics">
-        <h2>Core Mechanics</h2>
-            <ul>
-                <li>What would be a good resolution system: dice, 
-                    cards, hybrid? How will actions be decided?
-                </li>
-                <li>Define the turn structure: alternating  activation,
-                    I go you go (IGOUGO), or something completely new?
-                </li>
-                <li>Stats and attributes for units will need to determined.
-                    Simplicity wins but also needs flexibility for variety.
-                </li>
-            </ul>
-    </section>
+            <div class="top-box top-box-a">
+                <h4>Link to something 1</h4>
+                <p class="desc">Some stuff here</p>
+                <a href="#" class="btn">More stuff</a>
+            </div>
 
-    <section class="idea" id="factions">
-        <h2>Factions and Unit Variety</h2>
-            <ul>
-                <li>Start with a few starting factions that have
-                    unique playstyles (eg., fast vs tough)
-                </li>
-                <li>What are the unit roles (if any)? Leader, 
-                    specialists, grunts. How will they differ
-                    mechanically?
-                </li>
-                <li>Gotta make sure faction asymmetry feels 
-                    balanced- each should have strengths and
-                    weaknesses.
-                </li>
-            </ul>
-    </section>
+            <div class="top-box top-box-b">
+                <h4>Link to something 2</h4>
+                <p class="desc">Some stuff here</p>
+                <a href="#" class="btn">More Stuff</a>
+            </div>
+        </section>
 
-    <section class="idea2" id="objectives">
-        <h2>Objectives and win conditions</h2>
-            <ul>
-                <li>How will players win: kill points, objectives, 
-                    or narrative goals? 
-                </li>
-                <li>Need to plan for varied missions to keep games 
-                    replayable. This could come in the form of 
-                    randomization via an app.
-                </li>
-                <li>Can we balance competetive and casual play? 
-                    Can we appeal to multiple motives?
-                </li>
-            </ul>
-    </section>
+        <!-- Boxes section-->
+        <section class="boxes">
+            <div class="box">
+                <i class="fa-solid fa-gear fa-4x"></i>
+                <h3>Some stuff 0</h3>
+                <p>A bunch of text</p>
+            </div>
 
-    <section class="idea" id="terrain">
-        <h2>Terrain and Environments</h2>
-            <ul>
-                <li>How will terrain impact gameplay? Will there 
-                    be rules like cover, line of sight, or movement 
-                    penalties?
-                </li>
-                <li>Will terrain be fixed or flexible layout? Does 
-                    it matter?
-                </li>
-                <li>Will there be environment effects? Weather, 
-                    traps, or other element like collapsing bridges.
-                </li>
-            </ul>
-    </section>
+            <div class="box">
+                <i class="fa-solid fa-tree fa-4x"></i>
+                <h3>Some stuff 1</h3>
+                <p>A bunch of text</p>
+            </div>
 
-    <section class="idea2" id="progress">
-        <h2>Progression and Customization</h2>
-            <ul>
-                <li>Can players cusomize units (gear, skills, 
-                    names, etc) or build rosters?
-                </li>
-                <li>Is there a level up system to gain xp to
-                    gain new things/skills?
-                </li>
-                <li>Keep in mind- Depth of the system may overwhelm 
-                    some players, especially new players. Gotta have 
-                    an attrative system with simplicity.
-                </li>
-            </ul>
-    </section>
+            <div class="box">
+                <i class="fa-solid fa-flask fa-4x"></i>
+                <h3>Some stuff 2</h3>
+                <p>A bunch of text</p>
+            </div>
 
-    <section class="idea" id="accessibility">
-        <h2>Accessibility and Components</h2>
-            <ul>
-                <li>I like the idea of digital rules</li>
-                <li>I also like the idea of digital list building</li>
-                <li>What physical components would be needed? (Dice, 
-                    app, tokens, measuring tools)
-                </li>
-            </ul>
-    </section>
+            <div class="box">
+                <i class="fa-solid fa-dice fa-4x"></i>
+                <h3>Some stuff 3</h3>
+                <p>A bunch of text</p>
+            </div>
+        </section>
 
-    <section class="idea2" id="playtest">
-        <h2>Playtesting framework</h2>
-            <ul>
-                <li>Whats the plan to test mechanics?</li>
-                <li>Should we include outsiders (community 
-                    playtesting)?
-                </li>
-                <li>How can we get good feedback?</li>
-            </ul>
-    </section>
+        <!-- Info section -->
+         <section class="info">
+            <img src="pic1.JPG" alt="description">
+            <div>
+                <h2>More stuff</h2>
+                <p>A bunch of text</p>
+                <a href="#" class="btn">Button</a>
+            </div>
+         </section>
 
-    <section class="idea" id="point">
-        <h2>Unique selling point</h2>
-            <ul>
-                <li>I'm not assuming we'll be selling anything 
-                    or making a profit. This is for enjoyment 
-                    first and foremost. No expectations!
-                </li>
-                <li>What is going to make our game stand out 
-                    compared to every other game? Is it novel 
-                    mechanics? A fresh setting? Good rules? 
-                    No politically motivated bias?
-                </li>
-                <li>
-                    I'd prefer to focus more on comunity than 
-                    anything else. The game won't exist unless 
-                    people exist to play it.
-                </li>
-            </ul>
-    </section>
+         <!--Portfolio Section-->
+         <section class="portfolio">
+            <img src="pic2.JPG" alt="">
+            <img src="pic3.JPG" alt="">
+            <img src="pic5.JPG" alt="">
+            <img src="pic6.JPG" alt="">
+            <img src="pic7.JPG" alt="">
+            <img src="pic8.JPG" alt="">
+         </section>
 
-    <footer>
-        <p>Site made by Kyle :)</p>
-    </footer>
+        <!--Footer-->
+        <footer>
+            <p>&copy 2025</p>
+        </footer>
+    </div>
 </body>
 </html>
