--- a/dev.html
+++ b/dev.html
@@ -15,11 +15,25 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="foundations.html">Foundations</a></li>
-                <li><a href="#">Lore bits</a></li>
+                <li><a href="lore.html">Lore bits</a></li>
             </ul>
          </nav>
 
         <!-- Info section -->
+        <section class="info">
+            <img src="pic1.JPG" alt="description">
+            <div>
+                <h2>4/14/2025 #2</h2>
+                <p>Main Theme + factions</p>
+                <p>We codenamed the planet Broken Eden. We built upon the planet some more.
+                    Got a few factions set up and an explanation for magic.
+                </p>
+                <p>Since we now have a core theme we can start writing 
+                    factions, playing with lore, and world building.
+                </p>
+            </div>
+         </section>
+
          <section class="info">
             <img src="pic1.JPG" alt="description">
             <div>
