--- a/foundations.html
+++ b/foundations.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="dev.html">Dev Updates</a></li>
-                <li><a href="#">Lore bits</a></li>
+                <li><a href="lore.html">Lore bits</a></li>
             </ul>
          </nav>
 
@@ -116,8 +116,7 @@
 
             <div class="box">
                 <i class="fa-solid fa-dice fa-4x"></i>
-                <h3>Some stuff 3</h3>
-                <p>I'm not in this to make a profit or create a business.</p>
+                <h3>Uniqueness</h3>
                 <p>What is going to make our game stand out compared to every 
                     other game? Is it novel mechanics? A fresh setting? Good rules? 
                     No politically motivated bias?</p>
