Added more lore bits/additional readability

--- a/lore.html
+++ b/lore.html
@@ -22,53 +22,56 @@
         <!-- Top container -->
         <section class="info">
             <div>
+                <h2>Thrym</h2>
+                <p>A resource, a fuel, and a source of magic. It seeps from wells 
+                    hidden in unstable zones, fought over by desperate factions. 
+                    One group has synthesizes it- unsable and toxic. Another lives 
+                    sealed in Thrym-fuled domes, surviving in polluted, 
+                    hyper-industrialized wastelands.
+                </p>
+            </div>
+         </section>
+
+        <section class="info">
+            <div>
                 <h2>Faction: Steam punk guys</h2>
-                <p>Your poster children of the world</p>
+                <p>Industrial survivors in domed cities powered by Thrym. Pollution-heavy, airship-bound, clinging 
+                    to structure in a collapsing world.
+                </p>
             </div>
          </section>
 
          <section class="info">
             <div>
                 <h2>Faction: Cultists</h2>
-                <p>The cult believes the breakdown of the world is not a disaster- but a holy event, the long-awaited return cycle when all life will be reabsorbed into the life stream and offered to creation.
-                    They see the current collapse-magic backlash, failing physics, vanishing people- not as horror, but as divine signs of awakening. To them, resisting is heresy. Prolonging life is sacrifice.
-                    Their ultimate goal?
-                    Accelerate the End by offering sacrifices to the machine-world and hastening its final "pulse"- a system-wide collapse that will "transmit" the harvested life-energy to the gods beyond the stars.
-                    Life is fuel. Your body is a shell. Your spirit is a spark. Your true purpose is to burn brightly in your final moments.
-                    Magic is sacred death. Casters are holy martyrs. The best among them burn out gloriously and instantly.
-                    Sacrifice is salvation. Willingly giving your life ensures you are "broadcast" cleanly into the stream.
-                    They kidnap the sick, the old, or magically-gifted people for noble release. Children are raised to view suicide as scared duty.</p>
+                <p>Zealots who believe the collapse is holy. Sacrifice is salvation. Magic is sacred death. They 
+                    hasten the system's end to "broadcast" life to the stars. Monstrous ascendants are born from 
+                    flesh offerings and eldritch communion.
+                </p>
             </div>
          </section>
 
          <section class="info">
             <div>
                 <h2>Faction: Synthetic punks</h2>
-                <p>Innovators with a theme in science. They created a syntheic Thrym which they use to fuel their tech. They've also created 
-                    a way to fuse biology into technology.
-                </p>
+                <p>Mad engineers of corrupted, synthetic Thrym. Their tech is volatile-powerful, but corrupting.</p>
             </div>
          </section>
 
          <section class="info">
             <div>
                 <h2>Faction: Rootbound</h2>
-                <p>The Rootbound are a collective of nature fanatics bound—both spiritually and physically—to the will of the wild. Their sole purpose 
-                    is to tear down the blight of industrialized and modernized society reducing steel and stone to dust, and returning the world to what 
-                    they call “The True State.” They wield ancient nature magics, conjuring vines, beasts, and storms to reclaim lands lost to progress. 
-                    To them, cities are scars upon the earth, and technology is a sickness to be purged. They don’t negotiate. They don’t build alliances. 
-                    They uproot.
+                <p>Nature's twisted immune system. Once caretakers, now genocidal anti-industrial fanatics, spiritually 
+                    bound to the land and driven to purge artificial life.
                 </p>
             </div>
          </section>
 
          <section class="info">
             <div>
-                <h2>Techno Vikings/Norse Barbarians</h2>
-                <p>
-                    Nomadic tribes of barbarians with shamanistic roots. They have connection to nature and use it to control mech suits. Each suit is alive 
-                    using the spirit of the bear, crow, wolf, [insert animal]. They have a warrior culture and deep traditions. They don't seperate machine and spirit. 
-                    They are one. Technology is used throuhgout their daily lives and spirits are weaved into tehcnology via rituals.
+                <h2>The God-Eaters</h2>
+                <p>Slayers of their own god, devourers of divine flesh. Transformed by the act, hunted by the god's spirit 
+                    an its wrathful echoes. They are eternal nomads being hunted by ghosts of the past.
                 </p>
             </div>
          </section>
