--- a/index.html
+++ b/index.html
@@ -28,9 +28,24 @@
             </header>
 
             <div class="top-box top-box-a">
-                <h4>Link to something 1</h4>
-                <p class="desc">Some stuff here</p>
-                <a href="#" class="btn">More stuff</a>
+                <h4>Synopsis:</h4>
+                <p class="desc">The planet is a dying world built by absent gods- 
+                    a vast artifical system designed to nurture life, powered by the 
+                    elemental force of Thrym. Life evolved naturally, but it was 
+                    stabilized by this ancient machinery. Magic emerged as an 
+                    unintended byproduct, drawn from the very processes meant to keep 
+                    the world alive.
+                </p>
+                <p>Now, that system is collapsing. Thrym is running wild. Nature is 
+                    mutating. Physics is erratic. Time is broken. The planet spirals toward 
+                    entropy, and its people face extinction or transformation.
+                </p>
+                <p>Long ago minor gods were placed to watch over the world- but the races of 
+                    the planet killed them, each gaining twisted powers in the aftermath. Some 
+                    gods offered gifts freely. Others were consumed violently, leaving behind 
+                    echoes, curses, or communion.
+                </p>
+                <a href="#" class="btn">A button!</a>
             </div>
 
             <div class="top-box top-box-b">
