added dev post 4/16

--- a/dev.html
+++ b/dev.html
@@ -23,6 +23,18 @@
         <section class="info">
             <img src="pic1.JPG" alt="description">
             <div>
+                <h2>4/16/2025</h2>
+                <p>Foundations</p>
+                <p>We created a synopsis of the foundational theme/concept. Also established 5 
+                    main factions as of writing this. Could be more to come depending on 
+                    interests and work loads :)
+                </p>
+            </div>
+         </section>
+
+        <section class="info">
+            <img src="pic1.JPG" alt="description">
+            <div>
                 <h2>4/14/2025 #2</h2>
                 <p>Main Theme + factions</p>
                 <p>We codenamed the planet Broken Eden. We built upon the planet some more.
