--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div class="top-box top-box-a">
                 <h4>Synopsis:</h4>
-                <p class="desc">The planet is a dying world built by absent gods- 
+                <p class="desc">Our planet is a dying world built by absent gods- 
                     a vast artifical system designed to nurture life, powered by the 
                     elemental force of Thrym. Life evolved naturally, but it was 
                     stabilized by this ancient machinery. Magic emerged as an 
@@ -59,7 +59,7 @@
         <section class="boxes">
             <div class="box">
                 <i class="fa-solid fa-gear fa-4x"></i>
-                <h3>Steam Punk Faction</h3>
+                <h3>Smokebound Accord</h3>
                 <p>The poster children of the world. Love tech, live with tech. Tech.</p>
             </div>
 
