--- a/lore.html
+++ b/lore.html
@@ -34,7 +34,7 @@
 
         <section class="info">
             <div>
-                <h2>Faction: Steam punk guys</h2>
+                <h2>Faction: Smokebound Accord</h2>
                 <p>Industrial survivors in domed cities powered by Thrym. Pollution-heavy, airship-bound, clinging 
                     to structure in a collapsing world.
                 </p>
